# pushkind-dantes

./: AGENTS.md  Cargo.toml  README.md  SPEC.md  diesel.toml  pushkind-dantes.service
.github/workflows/: deploy_dev.yml  test_pr.yml
config/: default.yaml  local.yaml  prod.yaml
crawlers/: pyproject.toml  test_client.py
crawlers/pushkind_crawlers/: __main__.py  db.py  embedding.py
crawlers/pushkind_crawlers/crawler/: http.py  protocols.py
crawlers/pushkind_crawlers/crawler/stores/: tea101.py
crawlers/pushkind_dantes/: server.py
crawlers/pushkind_dantes/crawler/stores/: tea101.py
migrations/2025-05-27-102158_add-crawlers/: down.sql  up.sql
migrations/2025-07-29-041101_create-products/: down.sql  up.sql
migrations/2025-07-30-093741_create-product-benchmark/: down.sql  up.sql
migrations/2025-07-30-141731_add_product_benchmark_distance/: down.sql  up.sql
migrations/2025-07-30-175850_add-embedding-columns/: down.sql  up.sql
migrations/2025-08-01-202241_add-benchmark-processing-column/: down.sql  up.sql
migrations/2025-08-04-144123_add-crawler-add-url-index/: down.sql  up.sql
migrations/2025-08-09-111234_create-products-fts/: down.sql  up.sql
migrations/2025-08-14-103149_add-gutenberg-crawler/: up.sql
migrations/2025-08-17-042416_add-benchmark-num_products/: down.sql  up.sql
migrations/2025-11-13-090358_add-product-images/: down.sql  up.sql
migrations/2026-02-19-193815_add-master-categories/: down.sql  up.sql
migrations/2026-02-24-170500_nullable-product-url-and-sku-indexes/: down.sql  up.sql
plans/: master-category-directory.md  product-category-cell-dual-render.md  product-import-export.md
specs/decisions/: 0001-master-category-directory.md
specs/features/: master-category-directory.md  product-category-cell-dual-render.md  product-import-export.md
src/: embedding.rs  error_conversions.rs  lib.rs  main.rs  schema.rs
src/domain/: benchmark.rs  category.rs  crawler.rs  mod.rs  product.rs  types.rs  zmq.rs
src/dto/: categories.rs
src/forms/: benchmarks.rs  categories.rs  import_export.rs  mod.rs
src/models/: benchmark.rs  category.rs  config.rs  crawler.rs  mod.rs  product.rs  product_image.rs
src/repository/: benchmark.rs  category.rs  crawler.rs  mod.rs  processing.rs  product.rs  test.rs
src/routes/: api.rs  benchmarks.rs  categories.rs  main.rs  mod.rs  products.rs
src/services/: api.rs  benchmarks.rs  categories.rs  errors.rs  import_export.rs  main.rs  mod.rs  products.rs
templates/: base.html  constants.html
templates/benchmarks/: add_benchmark_modal.html  benchmark.html  index.html
templates/categories/: index.html
templates/components/: navigation.html  pagination.html  product.html  product_header.html  product_search.html  products.html
templates/main/: index.html
templates/products/: index.html
tests/: db.rs  repository.rs
tests/common/: mod.rs
