[package]
name = "pushkind-dantes"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
actix-web = "4.11.0"
tera = { version = "1.20.1", features = ["builtins"] }
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-identity = "0.9.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "dantes",
    "zeromq",
    "actix",
] }
validator = { version = "0.20.0", features = ["derive"] }
actix-files = "0.6.8"
csv = "1.4.0"
actix-multipart = "0.7.2"


[dev-dependencies]
diesel_migrations = "2.3.0"
serde_json = "1.0.145"
