[project]
name = "pushkind-crawlers"
version = "0.1.0"
description = ""
authors = [
    {name = "Viacheslav Matrizaev",email = "matrizaev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "zmq (>=0.0.0,<0.0.1)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.4.4"

[tool.poetry.scripts]
server = "pushkind_crawlers.__main__:main"
